fix(timefield): fix wrong truncation on timefield (#1763)
* fix(timefield): fix wrong truncation on timefield

* fix(timefield): assign private to mesureTextWidth method

* fix(timefield): fix test

---------

--- a/projects/ng-aquila/src/timefield/timefield.component.scss
+++ b/projects/ng-aquila/src/timefield/timefield.component.scss
@@ -34,7 +34,6 @@ $selected-box-shadow: 0 -2px 0 0;
 .nx-timefield-input__field {
   &__hours,
   &__minutes {
-    width: 2ch;
     padding: 0;
     margin: 0;
     text-overflow: unset !important;
